[gd_scene load_steps=42 format=3 uid="uid://c7fcbb2qbuc1i"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_v5xgl"]
[ext_resource type="Texture2D" uid="uid://dc27nymluda5i" path="res://characterSpritesGame/Hat_Skeleton.png" id="3_q56vj"]
[ext_resource type="Texture2D" uid="uid://bhfm6swloa6sa" path="res://characterSpritesGame/ThePope_Skeleton.png" id="4_4m6et"]
[ext_resource type="Texture2D" uid="uid://1jl44alvrs3k" path="res://characterSpritesGame/SkeletonAndGhost.png" id="4_7xlfh"]
[ext_resource type="Texture2D" uid="uid://dai4pq5m2v31c" path="res://characterSpritesGame/Googles_Skeleton.png" id="5_wru1n"]
[ext_resource type="FontFile" uid="uid://be8hbwrmnpdjp" path="res://TEMP_assets/fonts/PixelOperator8.ttf" id="6_1h0ua"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gx0s2"]
atlas = ExtResource("4_7xlfh")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d78hk"]
atlas = ExtResource("4_7xlfh")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8w0u"]
atlas = ExtResource("4_7xlfh")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3tof"]
atlas = ExtResource("4_7xlfh")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_girpr"]
atlas = ExtResource("4_7xlfh")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bgtb"]
atlas = ExtResource("3_q56vj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kogt"]
atlas = ExtResource("3_q56vj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5jai"]
atlas = ExtResource("3_q56vj")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7lgb"]
atlas = ExtResource("3_q56vj")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sundg"]
atlas = ExtResource("3_q56vj")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2btv"]
atlas = ExtResource("3_q56vj")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d5se"]
atlas = ExtResource("3_q56vj")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_juxh8"]
atlas = ExtResource("3_q56vj")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnanu"]
atlas = ExtResource("3_q56vj")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk73y"]
atlas = ExtResource("3_q56vj")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kc200"]
atlas = ExtResource("3_q56vj")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0336"]
atlas = ExtResource("4_4m6et")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7dk7"]
atlas = ExtResource("4_4m6et")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrsqj"]
atlas = ExtResource("4_4m6et")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4uyt"]
atlas = ExtResource("4_4m6et")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ekso"]
atlas = ExtResource("4_4m6et")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp4vi"]
atlas = ExtResource("5_wru1n")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2yc8"]
atlas = ExtResource("5_wru1n")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnoap"]
atlas = ExtResource("5_wru1n")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0be1"]
atlas = ExtResource("5_wru1n")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn2hy"]
atlas = ExtResource("5_wru1n")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pm6d"]
atlas = ExtResource("4_7xlfh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qe6e"]
atlas = ExtResource("4_7xlfh")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf17v"]
atlas = ExtResource("4_7xlfh")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_uesfa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx0s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d78hk")
}],
"loop": true,
"name": &"ghostIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8w0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3tof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8w0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_girpr")
}],
"loop": true,
"name": &"ghostRun",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bgtb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kogt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bgtb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5jai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7lgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sundg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2btv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d5se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_juxh8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnanu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk73y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kc200")
}],
"loop": true,
"name": &"hatSkellyRun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0336")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7dk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrsqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4uyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ekso")
}],
"loop": true,
"name": &"popSkellyRun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp4vi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2yc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnoap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0be1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn2hy")
}],
"loop": true,
"name": &"priestSkellyRun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pm6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qe6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf17v")
}],
"loop": true,
"name": &"skellyRun",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_osuju"]
radius = 5.0
height = 32.1801

[sub_resource type="Animation" id="Animation_e4jfr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, -20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(40, 23)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.356493]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Label:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.285196, 0.283882)]
}

[sub_resource type="Animation" id="Animation_ekh1r"]
resource_name = "fiveFalling"
length = 1.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.23333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.733333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-2, -20), Vector2(1, -21), Vector2(4, -16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.733333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(40, 23), Vector2(40, 23), Vector2(40, 23)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.356493, 0.867429]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Label:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.285196, 0.283882)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_li8c6"]
_data = {
"RESET": SubResource("Animation_e4jfr"),
"fiveFalling": SubResource("Animation_ekh1r")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtffk"]
size = Vector2(17.1931, 22)

[node name="KnightPlayer" type="CharacterBody2D"]
collision_layer = 34
script = ExtResource("1_v5xgl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.41578, 0.41578)
sprite_frames = SubResource("SpriteFrames_uesfa")
animation = &"skellyRun"
autoplay = "ghostRun"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(0, -9.53674e-07)
scale = Vector2(0.945174, 0.807954)
shape = SubResource("CapsuleShape2D_osuju")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -2.0
offset_top = -20.0
offset_right = 38.0
offset_bottom = 3.0
rotation = 0.356493
scale = Vector2(0.285196, 0.283882)
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("6_1h0ua")
text = "-5"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_li8c6")
}

[node name="PlayerHitBox" type="Area2D" parent="."]
scale = Vector2(1.68962, 1.05365)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitBox"]
light_mask = 2
visibility_layer = 2
scale = Vector2(1.27585, 1.02995)
shape = SubResource("RectangleShape2D_wtffk")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.25

[node name="deal_attack_timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="body_entered" from="PlayerHitBox" to="." method="_on_player_hit_box_body_entered"]
[connection signal="body_shape_exited" from="PlayerHitBox" to="." method="_on_player_hit_box_body_shape_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
